--- a/RestaurantRoomManager/nbproject/project.properties
+++ b/RestaurantRoomManager/nbproject/project.properties
@@ -34,7 +34,7 @@ includes=**
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=\ -Xlint:unchecked
+javac.compilerargs=\ -Xlint:unchecked -Xlint:all
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
