--- a/RestaurantRoomManager/nbproject/project.properties
+++ b/RestaurantRoomManager/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=be.wget.inpres.java.restaurantroommanager.RestaurantRoomManager
+main.class=be.wget.inpres.java.restaurant.roommanager.RestaurantRoomManager
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
