Add kitchen manager and working communication with room manager

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 **/build/
 /MyUtils/nbproject/private/
+/RestaurantKitchenManager/nbproject/private/
+/RestaurantConfigLibrary/nbproject/private/
+/RestaurantConfigLibrary/dist/
+/RestaurantKitchenManager/dist/
