--- a/RestaurantConfigLibrary/nbproject/project.properties
+++ b/RestaurantConfigLibrary/nbproject/project.properties
@@ -1,11 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=RestaurantRoomManager
-application.vendor=wget
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,20 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/RestaurantRoomManager.jar
+dist.jar=${dist.dir}/RestaurantConfigLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.BasicStringNetworkLib.jar=../libs/BasicStringNetworkLib.jar
-file.reference.StringSlicer.jar=../libs/StringSlicer.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.RestaurantConfigLibrary.jar}:\
-    ${file.reference.BasicStringNetworkLib.jar}:\
-    ${file.reference.StringSlicer.jar}
+javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=\ -Xlint:unchecked -Xlint:all
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
@@ -62,14 +54,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=be.wget.inpres.java.restaurant.roommanager.RestaurantRoomManager
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.license=gpl30
-project.RestaurantConfigLibrary=../RestaurantConfigLibrary
-reference.RestaurantConfigLibrary.jar=${project.RestaurantConfigLibrary}/dist/RestaurantConfigLibrary.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
