Move serialization and network protocol management to dedicated classes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ build/
 nbbuild/
 dist/
 nbdist/
+/RestaurantRoomManager/nbproject/private/
+/RestaurantKitchenManager/nbproject/private/
+/RestaurantConfigLibrary/nbproject/private/
+/RestaurantSharedObjects/nbproject/private/
