--- a/RestaurantSharedObjects/nbproject/project.properties
+++ b/RestaurantSharedObjects/nbproject/project.properties
@@ -24,12 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/RestaurantConfigLibrary.jar
+dist.jar=${dist.dir}/RestaurantSharedObjects.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.StringSlicer.jar=../libs/StringSlicer.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.StringSlicer.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
