--- a/RestaurantKitchenManager/nbproject/project.properties
+++ b/RestaurantKitchenManager/nbproject/project.properties
@@ -33,8 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.BasicStringNetworkLib.jar}:\
-    ${reference.RestaurantConfigLibrary.jar}:\
-    ${file.reference.StringSlicer.jar}
+    ${file.reference.StringSlicer.jar}:\
+    ${reference.RestaurantConfigLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,13 +59,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=be.wget.inpres.java.restaurant.kitchenmanager.guis.KitchenManagerGui
+main.class=be.wget.inpres.java.restaurant.kitchenmanager.RestaurantKitchenManager
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.RestaurantConfigLibrary=../RestaurantConfigLibrary
-reference.RestaurantConfigLibrary.jar=${project.RestaurantConfigLibrary}/dist/RestaurantConfigLibrary.jar
+project.RestaurantConfigLibrary=../RestaurantSharedObjects
+reference.RestaurantConfigLibrary.jar=${project.RestaurantConfigLibrary}/dist/RestaurantSharedObjects.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
