--- a/RestaurantRoomManager/nbproject/project.properties
+++ b/RestaurantRoomManager/nbproject/project.properties
@@ -35,9 +35,9 @@ file.reference.StringSlicer.jar=../libs/StringSlicer.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.RestaurantConfigLibrary.jar}:\
     ${file.reference.BasicStringNetworkLib.jar}:\
-    ${file.reference.StringSlicer.jar}
+    ${file.reference.StringSlicer.jar}:\
+    ${reference.RestaurantConfigLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ -Xlint:unchecked -Xlint:all
 javac.deprecation=false
@@ -68,8 +68,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.license=gpl30
-project.RestaurantConfigLibrary=../RestaurantConfigLibrary
-reference.RestaurantConfigLibrary.jar=${project.RestaurantConfigLibrary}/dist/RestaurantConfigLibrary.jar
+project.RestaurantConfigLibrary=../RestaurantSharedObjects
+reference.RestaurantConfigLibrary.jar=${project.RestaurantConfigLibrary}/dist/RestaurantSharedObjects.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
