--- a/RestaurantKitchenManager/nbproject/project.properties
+++ b/RestaurantKitchenManager/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=RestaurantKitchenManager
+application.vendor=wget
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/RestaurantKitchenManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.BasicStringNetworkLib.jar=../libs/BasicStringNetworkLib.jar
 file.reference.StringSlicer.jar=../libs/StringSlicer.jar
@@ -36,7 +38,7 @@ javac.classpath=\
     ${file.reference.StringSlicer.jar}:\
     ${reference.RestaurantConfigLibrary.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
